--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker-compose up --build
+  - docker-compose up --build -d
 
 script:
   - docker run multi-docker/react-test npm run test
