--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
 
 script:
   - docker-compose up --build -d
-  - docker run visits-node npm run test
+  - docker exec visits-node npm run test
 
 # deploy:
 #   provider: heroku
